WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41517
Compile fix for Android, #include <wtf/text/CString.h>
https://bugs.webkit.org/show_bug.cgi?id=41517
Summary
Compile fix for Android, #include <wtf/text/CString.h>
Kristian Monsen
Reported
2010-07-02 03:49:44 PDT
Changes in PrintContext.cpp uses CString. This does not get included in Android, probably due to different defines. Introduced here:
http://trac.webkit.org/changeset/61232
Attachments
Proposed patch.
(982 bytes, patch)
2010-07-02 04:06 PDT
,
Kristian Monsen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kristian Monsen
Comment 1
2010-07-02 04:06:03 PDT
Created
attachment 60357
[details]
Proposed patch.
Steve Block
Comment 2
2010-07-02 04:21:34 PDT
Comment on
attachment 60357
[details]
Proposed patch. r=me
WebKit Commit Bot
Comment 3
2010-08-11 01:36:13 PDT
Comment on
attachment 60357
[details]
Proposed patch. Clearing flags on attachment: 60357 Committed
r65137
: <
http://trac.webkit.org/changeset/65137
>
WebKit Commit Bot
Comment 4
2010-08-11 01:36:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug